modified:   src/app/auth/login/login.component.css 	modified:   src/app/auth/login/login.component.html 	modified:   src/app/auth/register/register.component.css 	modified:   src/index.html

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,63 +1,62 @@
- <!-- Main container holding the form sections -->
- <mat-icon>
-    book
-</mat-icon>
-<div class="container" id="container">
-    <!-- Sign-up form container -->
-    <div class="form-container sign-up-container">
-        <!-- Form to handle sign-up submission -->
-        <form (ngSubmit)="onSignUp()">
-            <h1>Tạo Tài Khoản</h1>
-            <!-- Social media login buttons -->
-            <div class="social-container">
-                <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
-                <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
-                <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
-            </div>
-            <span>hoặc dùng email để đăng ký</span>
-            <!-- Input fields for sign-up data -->
-            <input type="text" placeholder="Name" [(ngModel)]="name" name="name" required />
-            <input type="email" placeholder="Email" [(ngModel)]="email" name="email" required />
-            <input type="password" placeholder="Password" [(ngModel)]="password" name="password" required />
-            <!-- Sign-up button -->
-            <button class="bg-primary-gradient" type="submit">Đăng Kí</button>
-        </form>
-    </div>
-    <!-- Sign-in form container -->
-    <div class="form-container sign-in-container">
-        <!-- Form to handle sign-in submission -->
-        <form (ngSubmit)="onSignIn()">
-            <h1>Đăng Nhập</h1>
-            <!-- Social media login buttons -->
-            <div class="font-montserrat social-container">
-                <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-            <span>hoặc dùng tài khoản có sẵn</span>
-            <!-- Input fields for sign-in data -->
-            <input type="email" placeholder="Email" [(ngModel)]="email" name="email" required />
-            <input type="password" placeholder="Password" [(ngModel)]="password" name="password" required />
-            <!-- Forgot password link -->
-            <span (click)="navigateToForgotPasswordPage()">Quên Mật Khẩu?</span>
-            <!-- Sign-in button -->
-            <button class="bg-primary-gradient" type="submit">Đăng Nhập</button>
-        </form>
-    </div>
-    <!-- Overlay container for the animation and messages -->
-    <div class="overlay-container">
-        <div class="overlay bg-primary-gradient">
-            <div class="bg-primary-gradient overlay-panel overlay-left">
-                <h1>Mừng Bạn Trở Lại!</h1>
-                <p>Hãy Nhập Các Thông Tin Cần Thiết Để Được Xem Nhiều Hơn Nhé !</p>
-                <!-- Button to switch to sign-in form -->
-                <button class="ghost" id="signIn" (click)="togglePanel()">Sign In</button>
-            </div>
-            <div class="overlay-panel overlay-right">
-                <h1>Xin Chào Người Lạ Kia Ơi!</h1>
-                <p>Hãy Cùng Chúng Tôi Khám Phá Vô Tận Phim Nào !!</p>
-                <!-- Button to switch to sign-up form -->
-                <button class="ghost" id="signUp" (click)="togglePanel()">Sign Up</button>
+<div class="page-content">
+    <!-- Main container holding the form sections -->
+    <div class="container" id="container">
+        <!-- Sign-up form container -->
+        <div class="form-container sign-up-container">
+            <!-- Form to handle sign-up submission -->
+            <form name="myForm" (ngSubmit)="onSignUp()">
+                <h1>Tạo Tài Khoản</h1>
+                <!-- Social media login buttons -->
+                <div class="social-container">
+                    <a href="#" class="social">
+                        <i class="fa fa-google" style="font-size:24px"></i>
+                    </a>
+                </div>
+                <span>hoặc dùng email để đăng ký</span>
+                <!-- Input fields for sign-up data -->
+                <input type="text"      placeholder="Name"      [(ngModel)]="name"      name="name"     required />
+                <input type="email"     placeholder="Email"     [(ngModel)]="email"     name="email"    required />
+                <input type="password"  placeholder="Password"  [(ngModel)]="password"  name="password" required />
+                <!-- Sign-up button -->
+                <button class="bg-primary-gradient" type="submit">Đăng Kí</button>
+            </form>
+        </div>
+        <!-- Sign-in form container -->
+        <div class="form-container sign-in-container">
+            <!-- Form to handle sign-in submission -->
+            <form (ngSubmit)="onSignIn()">
+                <h1>Đăng Nhập</h1>
+                <!-- Social media login buttons -->
+                <div class="font-montserrat social-container">
+                    <a href="#" class="social">
+                        <i class="fa fa-google" style="font-size:24px"></i>
+                    </a>
+                </div>
+                <span>hoặc dùng tài khoản có sẵn</span>
+                <!-- Input fields for sign-in data -->
+                <input type="email"     placeholder="Email"     [(ngModel)]="email"     name="email"    required  />
+                <input type="password"  placeholder="Password"  [(ngModel)]="password"  name="password" required />
+                <!-- Forgot password link -->
+                <span class="forgot-password" (click)="navigateToForgotPasswordPage()">Quên Mật Khẩu?</span>
+                <!-- Sign-in button -->
+                <button class="bg-primary-gradient" type="submit">Đăng Nhập</button>
+            </form>
+        </div>
+        <!-- Overlay container for the animation and messages -->
+        <div class="overlay-container">
+            <div class="overlay bg-primary-gradient">
+                <div class="bg-primary-gradient overlay-panel overlay-left">
+                    <h1>Mừng Bạn Trở Lại!</h1>
+                    <p>Hãy Nhập Các Thông Tin Cần Thiết Để Được Xem Nhiều Hơn Nhé !</p>
+                    <!-- Button to switch to sign-in form -->
+                    <button class="ghost" id="signIn" (click)="togglePanel()">Sign In</button>
+                </div>
+                <div class="overlay-panel overlay-right">
+                    <h1>Xin Chào Người Lạ Kia Ơi!</h1>
+                    <p>Hãy Cùng Chúng Tôi Khám Phá Vô Tận Phim Nào !!</p>
+                    <!-- Button to switch to sign-up form -->
+                    <button class="ghost" id="signUp" (click)="togglePanel()">Sign Up</button>
+                </div>
             </div>
         </div>
     </div>
