--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -60,13 +60,13 @@
                     <h1>Mừng Bạn Trở Lại!</h1>
                     <p>Hãy Nhập Các Thông Tin Cần Thiết Để Được Xem Nhiều Hơn Nhé !</p>
                     <!-- Button to switch to sign-in form -->
-                    <button class="ghost" id="signIn" (click)="togglePanel()">Sign In</button>
+                    <button class="ghost" id="signIn" (click)="togglePanel()">Đăng Nhập</button>
                 </div>
                 <div class="overlay-panel overlay-right">
                     <h1>Xin Chào Người Lạ Kia Ơi!</h1>
                     <p>Hãy Cùng Chúng Tôi Khám Phá Vô Tận Phim Nào !!</p>
                     <!-- Button to switch to sign-up form -->
-                    <button class="ghost" id="signUp" (click)="togglePanel()">Sign Up</button>
+                    <button class="ghost" id="signUp" (click)="togglePanel()">Đăng Ký</button>
                 </div>
             </div>
         </div>
