--- a/src/app/layouts/main/main-footer/main-footer.component.html
+++ b/src/app/layouts/main/main-footer/main-footer.component.html
@@ -1,1 +1,6 @@
-<p>main-footer works!</p>
+<footer class="bg-zinc-50 text-center dark:bg-neutral-700 lg:text-left">
+    <div class="bg-black/5 p-4 text-center text-surface dark:text-white">
+      © 2024 Copyright:
+      <a href="https://tw-elements.com/"> COST UTE</a>
+    </div>
+  </footer>
