--- a/src/app/layouts/main/main-layout/main-layout.component.html
+++ b/src/app/layouts/main/main-layout/main-layout.component.html
@@ -1,1 +1,3 @@
-<p>main-layout works!</p>
+<app-main-header></app-main-header>
+<router-outlet></router-outlet>
+<app-main-footer></app-main-footer>
