--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,10 @@
 <div class="page-content">
-    <button type="button" ><i class="fa fa-arrow-left"></i> Về Trang Chủ</button>
+    <a routerLink="/home">
+    <button type="button" class="back-button">
+            <i class="fa fa-arrow-left"></i> 
+            Về Trang Chủ
+        </button>
+    </a>
     <!-- Main container holding the form sections -->
     <div class="container" id="container">
             <!-- Sign-up form container -->
