--- a/src/app/layouts/main/main-header/main-header.component.html
+++ b/src/app/layouts/main/main-header/main-header.component.html
@@ -1,67 +1,5 @@
 <header id="header" class="clearfix">
-
-  <!-- Responsive menu -->
-    <div class="nav__overlay" [class.active]="isActiveToggle"></div>
-    <div class="nav__mobile" [class.active]="isActiveToggle">
-      <div class="nav__mobile-close" (click)="toggleMenu()">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-        </svg>        
-      </div>
-      <ul class="nav__mobile-list">
-        <li>
-          <a href="#!" class="nav__mobile-link">Trang chủ</a>
-        </li>
-        <li>
-          <a href="#!" class="nav__mobile-link">Kho phim</a>
-        </li>
-        <li>
-          <a href="#!" class="nav__mobile-link">Phim bộ</a>
-        </li>
-        <li>
-          <a href="#!" class="nav__mobile-link">Phim lẻ</a>
-        </li>
-        <li>
-          <a href="#!" class="nav__mobile-link">Phim thuê</a>
-        </li>
-        <li>
-          <a href="#!" class="nav__mobile-link">Mua gói</a>
-        </li>
-        <li>
-          <a href="#!" class="nav__mobile-link">Tìm kiếm phim</a>
-        </li>
-        <li>
-          <a href="#!" class="nav__mobile-link">Giỏ hàng</a>
-          <nz-badge [nzCount]="5">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-            </svg>
-          </nz-badge>
-        </li>
-        <li>
-          <a href="#!" class="nav__mobile-link">Thông báo</a>
-          <nz-badge [nzCount]="5">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-            </svg>
-          </nz-badge>
-        </li>
-        <li>
-          <a href="#!" class="nav__mobile-link">Đăng nhập/đăng ký</a>
-        </li>
-      </ul>
-    </div>
-
   <div nz-row class="ant-row">
-    <!-- Hamburger button -->
-    <div nz-col class="ant-col ant-col-xs-2 ant-col-sm-2 ant-col-md-2 ant-col-lg-0 ant-col-xl-0 ant-col-xxl-0">
-      <div id="hamburger" (click)="toggleMenu()">
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-          <path stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-        </svg>
-      </div>  
-      
-    </div>
 
     <!-- Logo -->
     <div nz-col="" class="ant-col ant-col-xs-20 ant-col-sm-20 ant-col-md-20 ant-col-lg-4 ant-col-xl-5 ant-col-xxl-6">
@@ -144,6 +82,69 @@
       </ul>
     </div>
 
+    <!-- Hamburger button -->
+    <div nz-col class="ant-col ant-col-xs-2 ant-col-sm-2 ant-col-md-2 ant-col-lg-0 ant-col-xl-0 ant-col-xxl-0">
+      <div id="hamburger" (click)="openMenu()">
+        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+          <path stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+        </svg>
+      </div>  
+    </div>
+
+    <!-- Responsive menu -->
+    <nz-drawer
+      [nzClosable]="true"
+      [nzVisible]="visible"
+      [nzPlacement]="placement"
+      nzTitle="UTEPlay"
+      (nzOnClose)="closeMenu()"
+    >
+      <ng-container *nzDrawerContent>
+        <ul class="nav__mobile-list">
+          <li>
+            <a href="#!" class="nav__mobile-link">Trang chủ</a>
+          </li>
+          <li>
+            <a href="#!" class="nav__mobile-link">Kho phim</a>
+          </li>
+          <li>
+            <a href="#!" class="nav__mobile-link">Phim bộ</a>
+          </li>
+          <li>
+            <a href="#!" class="nav__mobile-link">Phim lẻ</a>
+          </li>
+          <li>
+            <a href="#!" class="nav__mobile-link">Phim thuê</a>
+          </li>
+          <li>
+            <a href="#!" class="nav__mobile-link">Mua gói</a>
+          </li>
+          <li>
+            <a href="#!" class="nav__mobile-link">Tìm kiếm phim</a>
+          </li>
+          <li>
+            <a href="#!" class="nav__mobile-link">Giỏ hàng</a>
+            <nz-badge [nzCount]="5">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+              </svg>
+            </nz-badge>
+          </li>
+          <li>
+            <a href="#!" class="nav__mobile-link">Thông báo</a>
+            <nz-badge [nzCount]="5">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
+              </svg>
+            </nz-badge>
+          </li>
+          <li>
+            <a href="#!" class="nav__mobile-link">Đăng nhập/đăng ký</a>
+          </li>
+        </ul>
+      </ng-container> 
+    </nz-drawer>
     
   </div>
 </header>
+
