--- a/src/app/management/pages/dashboard/dashboard.component.css
+++ b/src/app/management/pages/dashboard/dashboard.component.css
@@ -1,80 +1,126 @@
 :host {
-    display: flex;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .app-layout {
-    height: 100vh;
-  }
-  
-  .menu-sidebar {
-    position: relative;
-    z-index: 10;
-    min-height: 100vh;
-    box-shadow: 2px 0 6px rgba(237, 163, 3, 0.35);
-  }
-  
-  .header-trigger {
-    height: 64px;
-    padding: 20px 24px;
-    font-size: 20px;
-    cursor: pointer;
-    transition: all .3s, padding 0s;
-  }
-  
-  .trigger:hover {
-    color: #1890ff;
-  }
-  
-  .sidebar-logo {
-    position: relative;
-    height: 70px;
-    padding-left: 24px;
-    overflow: hidden;
-    line-height: 64px;
-    background: #001529;
-    transition: all .3s;
-  }
-  
-  .sidebar-logo img {
-    display: inline-block;
-    height: 45px;
-    width: 45px;
-    vertical-align: middle;
-  }
-  
-  .sidebar-logo h1 {
-    display: inline-block;
-    margin: 0 0 0 20px;
-    color: #fff;
-    font-weight: 600;
-    font-size: 14px;
-    font-family: Avenir, Helvetica Neue, Arial, Helvetica, sans-serif;
-    vertical-align: middle;
-  }
-  
-  nz-header {
-    padding: 0;
-    width: 100%;
-    z-index: 2;
-  }
-  
-  .app-header {
-    position: relative;
-    height: 64px;
-    padding: 0;
-    background: #fff;
-    box-shadow: 0 1px 4px rgba(33, 148, 255, 0.08);
-  }
-  
-  nz-content {
-    margin: 24px;
-  }
-  
-  .inner-content {
-    padding: 24px;
-    background: #fff;
-    height: 100%;
-  }
+  display: flex;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.app-layout {
+  height: 100vh;
+  background: #f0f2f5;
+  overflow: hidden;
+}
+
+.ant-layoutt {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+nz-content {
+  flex: 1;
+  overflow: auto;
+  /* Cho phép cuộn nội dung */
+}
+
+.menu-sidebar {
+  position: relative;
+  z-index: 10;
+  min-height: 100vh;
+  box-shadow: 2px 0 6px rgba(0, 21, 41, .35);
+  background-color: #212020;
+}
+
+.dashboard {
+  background-color: #212020;
+}
+
+.header-trigger {
+  height: 64px;
+  padding: 20px 24px;
+  font-size: 20px;
+  cursor: pointer;
+  transition: all .3s, padding 0s;
+  color: #1189f9;
+}
+
+.trigger:hover {
+  color: #ff005d;
+}
+
+.sidebar-logo {
+  position: relative;
+  height: 70px;
+  padding-left: 24px;
+  overflow: hidden;
+  line-height: 64px;
+  background: #212020;
+  transition: all .3s;
+}
+
+.sidebar-logo img {
+  display: inline-block;
+  height: 45px;
+  width: 45px;
+  vertical-align: middle;
+}
+
+.sidebar-logo h1 {
+  display: inline-block;
+  margin: 0 0 0 20px;
+  color: #fff;
+  font-weight: 600;
+  font-size: 14px;
+  font-family: Avenir, Helvetica Neue, Arial, Helvetica, sans-serif;
+  vertical-align: middle;
+}
+
+nz-header {
+  padding: 0;
+  width: 100%;
+  z-index: 2;
+}
+
+.app-header {
+  position: relative;
+  height: 64px;
+  padding: 0;
+  background: #212020;
+  box-shadow: 0 1px 4px rgba(0, 21, 41, .08);
+}
+
+nz-content {
+  margin: 24px;
+}
+
+.inner-content {
+  padding: 10px;
+  background: #212020;
+  height: auto;
+  min-height: 100px
+}
+
+.ant-layoutt {
+  background-color: #000000;
+}
+
+li {
+  background-color: #212020;
+}
+
+::ng-deep .ant-layout-footer {
+  background-color: #212020;
+  height: 50px;
+  padding: 14px;
+}
+
+.span-icon {
+  color: #2563eb;
+}
