--- a/src/app/management/pages/movie-list/movie-list.component.html
+++ b/src/app/management/pages/movie-list/movie-list.component.html
@@ -1,4 +1,12 @@
 <div class="container p-4">
+    <div class="flex items-center text-blue-700 text-2xl font-bold mb-2">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6 mr-1">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                d="M3.375 19.5h17.25m-17.25 0a1.125 1.125 0 0 1-1.125-1.125M3.375 19.5h1.5C5.496 19.5 6 18.996 6 18.375m-3.75 0V5.625m0 12.75v-1.5c0-.621.504-1.125 1.125-1.125m18.375 2.625V5.625m0 12.75c0 .621-.504 1.125-1.125 1.125m1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125m0 3.75h-1.5A1.125 1.125 0 0 1 18 18.375M20.625 4.5H3.375m17.25 0c.621 0 1.125.504 1.125 1.125M20.625 4.5h-1.5C18.504 4.5 18 5.004 18 5.625m3.75 0v1.5c0 .621-.504 1.125-1.125 1.125M3.375 4.5c-.621 0-1.125.504-1.125 1.125M3.375 4.5h1.5C5.496 4.5 6 5.004 6 5.625m-3.75 0v1.5c0 .621.504 1.125 1.125 1.125m0 0h1.5m-1.5 0c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125m1.5-3.75C5.496 8.25 6 7.746 6 7.125v-1.5M4.875 8.25C5.496 8.25 6 8.754 6 9.375v1.5m0-5.25v5.25m0-5.25C6 5.004 6.504 4.5 7.125 4.5h9.75c.621 0 1.125.504 1.125 1.125m1.125 2.625h1.5m-1.5 0A1.125 1.125 0 0 1 18 7.125v-1.5m1.125 2.625c-.621 0-1.125.504-1.125 1.125v1.5m2.625-2.625c.621 0 1.125.504 1.125 1.125v1.5c0 .621-.504 1.125-1.125 1.125M18 5.625v5.25M7.125 12h9.75m-9.75 0A1.125 1.125 0 0 1 6 10.875M7.125 12C6.504 12 6 12.504 6 13.125m0-2.25C6 11.496 5.496 12 4.875 12M18 10.875c0 .621-.504 1.125-1.125 1.125M18 10.875c0 .621.504 1.125 1.125 1.125m-2.25 0c.621 0 1.125.504 1.125 1.125m-12 5.25v-5.25m0 5.25c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125m-12 0v-1.5c0-.621-.504-1.125-1.125-1.125M18 18.375v-5.25m0 5.25v-1.5c0-.621.504-1.125 1.125-1.125M18 13.125v1.5c0 .621.504 1.125 1.125 1.125M18 13.125c0-.621.504-1.125 1.125-1.125M6 13.125v1.5c0 .621-.504 1.125-1.125 1.125M6 13.125C6 12.504 5.496 12 4.875 12m-1.5 0h1.5m-1.5 0c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125M19.125 12h1.5m0 0c.621 0 1.125.504 1.125 1.125v1.5c0 .621-.504 1.125-1.125 1.125m-17.25 0h1.5m14.25 0h1.5" />
+            </svg>
+            Quản lý Phim
+    </div>
     <div class="card-header mb-5 border-solid border-slate-600 border p-3 rounded-xl ring-offset ring-0">
         <div class="flex justify-between">
             <div>
@@ -69,9 +77,8 @@
     </div>
 </div>
 
-<nz-modal [nzMaskClosable]="false"  
-    [nzKeyboard]="true"[(nzVisible)]="isVisibleAdd" nzWidth="1000px" nzTitle="Add Movie" (nzOnCancel)="handleAddCancel()"
-    (nzOnOk)="handleAddCancel()">
+<nz-modal [nzMaskClosable]="false" [nzKeyboard]="true" [(nzVisible)]="isVisibleAdd" nzWidth="1000px" nzTitle="Add Movie"
+    (nzOnCancel)="handleAddCancel()" (nzOnOk)="handleAddCancel()">
     <ng-container *nzModalContent>
         <span class="text-blue-700 text-2xl"> Movie </span>
         <form [formGroup]="form" nz-form>
@@ -153,8 +160,8 @@
     </ng-container>
 </nz-modal>
 
-<nz-modal [nzMaskClosable]="false" [nzKeyboard]="true" [(nzVisible)]="isVisibleUpdate" nzWidth="1000px" nzTitle="Update Movie"
-    (nzOnCancel)="handleUpdateCancel()" (nzOnOk)="handleUpdateCancel()">
+<nz-modal [nzMaskClosable]="false" [nzKeyboard]="true" [(nzVisible)]="isVisibleUpdate" nzWidth="1000px"
+    nzTitle="Update Movie" (nzOnCancel)="handleUpdateCancel()" (nzOnOk)="handleUpdateCancel()">
     <ng-container *nzModalContent>
         <span class="text-blue-700 text-2xl"> Movie </span>
         <form [formGroup]="form" nz-form>
@@ -243,6 +250,6 @@
             <span class="bg-blue-700 w-6 h-6 text-3xl rounded" nz-icon nzType="delete" nzTheme="outline"></span>
             <span class="text-white h-5 text-lg"> Are you sure you want to delete it?</span>
         </div>
-        
+
     </ng-container>
 </nz-modal>
